--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,8 +7,14 @@ management:
     web.exposure.include: health
 
 spring:
-  ai.openai.chat.options:
-    model: gpt-4o
-    temperature: 0.7
-  threads.virtual.enabled: true
-  jmx.enabled: false
+  ai:
+    ollama:
+      base-url: http://ollama
+      chat.options:
+        model: qwen2:0.5b
+        temperature: 0.7
+        keep_alive: 35m
+        num-thread: 1
+
+threads.virtual.enabled: true
+jmx.enabled: false
