--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ management:
 spring:
   ai:
     ollama:
-      base-url: http://ollama
+      base-url: http://ollama:11434
       chat.options:
         model: qwen2:0.5b
         temperature: 0.7
