Deactivate react components for Vaadin

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,9 @@
                         <groupId>com.vaadin</groupId>
                         <artifactId>vaadin-maven-plugin</artifactId>
                         <version>${vaadin.version}</version>
+                        <configuration>
+                            <reactEnable>false</reactEnable>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>frontend</id>
