--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
     ollama:
       base-url: http://ollama:11434
       chat.options:
-        model: smollm2:1.7b
+        model: qwen2.5:1.5b
         temperature: 0.7
         keep_alive: 60m
         num-thread: 1
