--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -69,7 +69,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          outputs: 'compression=zstd,oci-mediatypes=true'
+          outputs: 'type=image,compression=zstd,oci-mediatypes=true'
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
