--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 management:
   endpoints:
-    web.exposure.include: health
+    web.exposure.include: health,scheduledtasks
 
 spring:
   ai:
