--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.2",
-    "@vaadin/bundles": "24.6.1",
+    "@vaadin/bundles": "24.6.2",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/polymer-legacy-adapter": "24.6.1",
-    "@vaadin/react-components": "24.6.1",
+    "@vaadin/polymer-legacy-adapter": "24.6.2",
+    "@vaadin/react-components": "24.6.2",
+    "@vaadin/react-components-pro": "24.6.2",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.6.1",
-    "@vaadin/vaadin-material-styles": "24.6.1",
-    "@vaadin/vaadin-themable-mixin": "24.6.1",
+    "@vaadin/vaadin-lumo-styles": "24.6.2",
+    "@vaadin/vaadin-material-styles": "24.6.2",
+    "@vaadin/vaadin-themable-mixin": "24.6.2",
     "@vaadin/vaadin-usage-statistics": "2.1.3",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "3.2.1",
+    "proj4": "2.12.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.28.0"
@@ -33,7 +35,7 @@
     "rollup-plugin-visualizer": "5.13.1",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.7.2",
+    "typescript": "5.7.3",
     "vite": "6.0.6",
     "vite-plugin-checker": "0.8.0",
     "workbox-build": "7.3.0",
@@ -43,18 +45,20 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.2",
-      "@vaadin/bundles": "24.6.1",
+      "@vaadin/bundles": "24.6.2",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/polymer-legacy-adapter": "24.6.1",
-      "@vaadin/react-components": "24.6.1",
+      "@vaadin/polymer-legacy-adapter": "24.6.2",
+      "@vaadin/react-components": "24.6.2",
+      "@vaadin/react-components-pro": "24.6.2",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.6.1",
-      "@vaadin/vaadin-material-styles": "24.6.1",
-      "@vaadin/vaadin-themable-mixin": "24.6.1",
+      "@vaadin/vaadin-lumo-styles": "24.6.2",
+      "@vaadin/vaadin-material-styles": "24.6.2",
+      "@vaadin/vaadin-themable-mixin": "24.6.2",
       "@vaadin/vaadin-usage-statistics": "2.1.3",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "3.2.1",
+      "proj4": "2.12.1",
       "react": "18.3.1",
       "react-dom": "18.3.1",
       "react-router-dom": "6.28.0"
@@ -73,14 +77,14 @@
       "rollup-plugin-visualizer": "5.13.1",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.7.2",
+      "typescript": "5.7.3",
       "vite": "6.0.6",
       "vite-plugin-checker": "0.8.0",
       "workbox-build": "7.3.0",
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "cc445c247aa8e5de96106c3987f69259092fc1f3f3e3fa8960f2cc3b8a755301"
+    "hash": "8ae7a9ef6ac6ffb8dc9dba5a51713ebc6107a7bcabfc253e65ac750d9c8e3e57"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -98,7 +102,9 @@
     "@vaadin/react-components": "$@vaadin/react-components",
     "react-dom": "$react-dom",
     "react-router-dom": "$react-router-dom",
-    "react": "$react"
+    "react": "$react",
+    "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
+    "proj4": "$proj4"
   },
   "type": "module"
 }
