--- a/src/main/resources/example-application.yaml
+++ b/src/main/resources/example-application.yaml
@@ -19,7 +19,10 @@ spring:
     ollama:
       base-url: http://<enter URL to ollama>
       chat.options:
-        model: <enter model name>
+        model: <enter model name> # e.g. deepseek-r1:1.5b
+        temperature: 0.7
+        keep_alive: 35m
+        num-thread: <number of CPU threads>
 
   data.mongodb:
     host: <host>
