--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
     <description>Hackernews clone for cycling news</description>
     <properties>
         <java.version>24</java.version>
-        <spring-ai.version>1.0.0-RC1</spring-ai.version>
-        <vaadin.version>24.7.3</vaadin.version>
+        <spring-ai.version>1.0.0</spring-ai.version>
+        <vaadin.version>24.7.4</vaadin.version>
         <maven.versions.plugin>2.18.0</maven.versions.plugin>
         <rome.rss.version>2.1.0</rome.rss.version>
         <browserstorage.version>1.0.0</browserstorage.version>
