--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.2",
-    "@vaadin/bundles": "24.8.3",
-    "@vaadin/bundles": "24.8.3",
+    "@vaadin/bundles": "24.8.6",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/polymer-legacy-adapter": "24.8.3",
-    "@vaadin/react-components": "24.8.3",
-    "@vaadin/react-components-pro": "24.8.3",
+    "@vaadin/polymer-legacy-adapter": "24.8.6",
+    "@vaadin/react-components": "24.8.6",
+    "@vaadin/react-components-pro": "24.8.6",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.8.3",
-    "@vaadin/vaadin-material-styles": "24.8.3",
-    "@vaadin/vaadin-themable-mixin": "24.8.3",
+    "@vaadin/vaadin-lumo-styles": "24.8.6",
+    "@vaadin/vaadin-material-styles": "24.8.6",
+    "@vaadin/vaadin-themable-mixin": "24.8.6",
     "@vaadin/vaadin-usage-statistics": "2.1.3",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -47,15 +46,15 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.2",
-      "@vaadin/bundles": "24.8.3",
+      "@vaadin/bundles": "24.8.6",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/polymer-legacy-adapter": "24.8.3",
-      "@vaadin/react-components": "24.8.3",
-      "@vaadin/react-components-pro": "24.8.3",
+      "@vaadin/polymer-legacy-adapter": "24.8.6",
+      "@vaadin/react-components": "24.8.6",
+      "@vaadin/react-components-pro": "24.8.6",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.8.3",
-      "@vaadin/vaadin-material-styles": "24.8.3",
-      "@vaadin/vaadin-themable-mixin": "24.8.3",
+      "@vaadin/vaadin-lumo-styles": "24.8.6",
+      "@vaadin/vaadin-material-styles": "24.8.6",
+      "@vaadin/vaadin-themable-mixin": "24.8.6",
       "@vaadin/vaadin-usage-statistics": "2.1.3",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
@@ -87,7 +86,7 @@
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "38a66d15945c87f326c87ff77827a65d029f045dc299372a954cbb2a5fb3d248"
+    "hash": "bfba3a2a944d20a8ad3d9d13421d54779846690e52696a46845d9511c289e805"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -106,75 +105,75 @@
     "react-dom": "$react-dom",
     "react": "$react",
     "react-router": "$react-router",
-    "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
-    "proj4": "$proj4",
-    "@vaadin/a11y-base": "24.8.3",
-    "@vaadin/accordion": "24.8.3",
-    "@vaadin/app-layout": "24.8.3",
-    "@vaadin/avatar": "24.8.3",
-    "@vaadin/avatar-group": "24.8.3",
-    "@vaadin/button": "24.8.3",
-    "@vaadin/card": "24.8.3",
-    "@vaadin/checkbox": "24.8.3",
-    "@vaadin/checkbox-group": "24.8.3",
-    "@vaadin/combo-box": "24.8.3",
-    "@vaadin/component-base": "24.8.3",
-    "@vaadin/confirm-dialog": "24.8.3",
-    "@vaadin/context-menu": "24.8.3",
-    "@vaadin/custom-field": "24.8.3",
-    "@vaadin/date-picker": "24.8.3",
-    "@vaadin/date-time-picker": "24.8.3",
-    "@vaadin/details": "24.8.3",
-    "@vaadin/dialog": "24.8.3",
-    "@vaadin/email-field": "24.8.3",
-    "@vaadin/field-base": "24.8.3",
-    "@vaadin/field-highlighter": "24.8.3",
-    "@vaadin/form-layout": "24.8.3",
-    "@vaadin/grid": "24.8.3",
-    "@vaadin/horizontal-layout": "24.8.3",
-    "@vaadin/icon": "24.8.3",
-    "@vaadin/icons": "24.8.3",
-    "@vaadin/input-container": "24.8.3",
-    "@vaadin/integer-field": "24.8.3",
-    "@vaadin/item": "24.8.3",
-    "@vaadin/list-box": "24.8.3",
-    "@vaadin/lit-renderer": "24.8.3",
-    "@vaadin/login": "24.8.3",
-    "@vaadin/markdown": "24.8.3",
-    "@vaadin/master-detail-layout": "24.8.3",
-    "@vaadin/menu-bar": "24.8.3",
-    "@vaadin/message-input": "24.8.3",
-    "@vaadin/message-list": "24.8.3",
-    "@vaadin/multi-select-combo-box": "24.8.3",
-    "@vaadin/notification": "24.8.3",
-    "@vaadin/number-field": "24.8.3",
-    "@vaadin/overlay": "24.8.3",
-    "@vaadin/password-field": "24.8.3",
-    "@vaadin/popover": "24.8.3",
-    "@vaadin/progress-bar": "24.8.3",
-    "@vaadin/radio-group": "24.8.3",
-    "@vaadin/scroller": "24.8.3",
-    "@vaadin/select": "24.8.3",
-    "@vaadin/side-nav": "24.8.3",
-    "@vaadin/split-layout": "24.8.3",
-    "@vaadin/tabs": "24.8.3",
-    "@vaadin/tabsheet": "24.8.3",
-    "@vaadin/text-area": "24.8.3",
-    "@vaadin/text-field": "24.8.3",
-    "@vaadin/time-picker": "24.8.3",
-    "@vaadin/tooltip": "24.8.3",
-    "@vaadin/upload": "24.8.3",
+    "@vaadin/a11y-base": "24.8.6",
+    "@vaadin/accordion": "24.8.6",
+    "@vaadin/app-layout": "24.8.6",
+    "@vaadin/avatar": "24.8.6",
+    "@vaadin/avatar-group": "24.8.6",
+    "@vaadin/button": "24.8.6",
+    "@vaadin/card": "24.8.6",
+    "@vaadin/checkbox": "24.8.6",
+    "@vaadin/checkbox-group": "24.8.6",
+    "@vaadin/combo-box": "24.8.6",
+    "@vaadin/component-base": "24.8.6",
+    "@vaadin/confirm-dialog": "24.8.6",
+    "@vaadin/context-menu": "24.8.6",
+    "@vaadin/custom-field": "24.8.6",
+    "@vaadin/date-picker": "24.8.6",
+    "@vaadin/date-time-picker": "24.8.6",
+    "@vaadin/details": "24.8.6",
+    "@vaadin/dialog": "24.8.6",
+    "@vaadin/email-field": "24.8.6",
+    "@vaadin/field-base": "24.8.6",
+    "@vaadin/field-highlighter": "24.8.6",
+    "@vaadin/form-layout": "24.8.6",
+    "@vaadin/grid": "24.8.6",
+    "@vaadin/horizontal-layout": "24.8.6",
+    "@vaadin/icon": "24.8.6",
+    "@vaadin/icons": "24.8.6",
+    "@vaadin/input-container": "24.8.6",
+    "@vaadin/integer-field": "24.8.6",
+    "@vaadin/item": "24.8.6",
+    "@vaadin/list-box": "24.8.6",
+    "@vaadin/lit-renderer": "24.8.6",
+    "@vaadin/login": "24.8.6",
+    "@vaadin/markdown": "24.8.6",
+    "@vaadin/master-detail-layout": "24.8.6",
+    "@vaadin/menu-bar": "24.8.6",
+    "@vaadin/message-input": "24.8.6",
+    "@vaadin/message-list": "24.8.6",
+    "@vaadin/multi-select-combo-box": "24.8.6",
+    "@vaadin/notification": "24.8.6",
+    "@vaadin/number-field": "24.8.6",
+    "@vaadin/overlay": "24.8.6",
+    "@vaadin/password-field": "24.8.6",
+    "@vaadin/popover": "24.8.6",
+    "@vaadin/progress-bar": "24.8.6",
+    "@vaadin/radio-group": "24.8.6",
+    "@vaadin/scroller": "24.8.6",
+    "@vaadin/select": "24.8.6",
+    "@vaadin/side-nav": "24.8.6",
+    "@vaadin/split-layout": "24.8.6",
+    "@vaadin/tabs": "24.8.6",
+    "@vaadin/tabsheet": "24.8.6",
+    "@vaadin/text-area": "24.8.6",
+    "@vaadin/text-field": "24.8.6",
+    "@vaadin/time-picker": "24.8.6",
+    "@vaadin/tooltip": "24.8.6",
+    "@vaadin/upload": "24.8.6",
     "@vaadin/router": "2.0.0",
-    "@vaadin/vertical-layout": "24.8.3",
-    "@vaadin/virtual-list": "24.8.3",
-    "@vaadin/board": "24.8.3",
-    "@vaadin/charts": "24.8.3",
-    "@vaadin/cookie-consent": "24.8.3",
-    "@vaadin/crud": "24.8.3",
-    "@vaadin/dashboard": "24.8.3",
-    "@vaadin/grid-pro": "24.8.3",
-    "@vaadin/map": "24.8.3",
-    "@vaadin/rich-text-editor": "24.8.3"
+    "@vaadin/vertical-layout": "24.8.6",
+    "@vaadin/virtual-list": "24.8.6",
+    "@vaadin/board": "24.8.6",
+    "@vaadin/charts": "24.8.6",
+    "@vaadin/cookie-consent": "24.8.6",
+    "@vaadin/crud": "24.8.6",
+    "@vaadin/dashboard": "24.8.6",
+    "@vaadin/grid-pro": "24.8.6",
+    "@vaadin/map": "24.8.6",
+    "@vaadin/rich-text-editor": "24.8.6",
+    "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
+    "proj4": "$proj4"
   },
   "type": "module"
 }
