chore: Update dependencies

--- a/package.json
+++ b/package.json
@@ -104,8 +104,6 @@
     "react": "$react",
     "react-router": "$react-router",
     "@vaadin/router": "2.0.0",
-    "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
-    "proj4": "$proj4",
     "@vaadin/a11y-base": "24.9.5",
     "@vaadin/accordion": "24.9.5",
     "@vaadin/app-layout": "24.9.5",
@@ -171,7 +169,9 @@
     "@vaadin/dashboard": "24.9.5",
     "@vaadin/grid-pro": "24.9.5",
     "@vaadin/map": "24.9.5",
-    "@vaadin/rich-text-editor": "24.9.5"
+    "@vaadin/rich-text-editor": "24.9.5",
+    "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
+    "proj4": "$proj4"
   },
   "type": "module"
 }
